--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </nav>
 
     <div class="navbar-adapt">
-        <img src="/My Porfolio/Images/energy.png" alt="Logo" class="logo">
+        <img src="/MyPortfolio/Images/energy.png" alt="Logo" class="logo">
     
         <!-- Toggle button for small screens -->
         <button class="navbar-toggle" id="navbar-toggle">
